# picojam

./: README.md
jam/berries/: init.py  init_utils.py  mixer_mnist.py  my_datasets.py  nn.py  nnn.py  pf.py  plot_utils.py  positional_encoding.py  random_utils.py
jam/berry_taste/: test_nn.ipynb
jam/notebooks/: 14012024.ipynb  PBAE_tune.ipynb  PBFSQ.ipynb  PBHyper.ipynb  PBVQVAE.ipynb  PBVQVAETune.ipynb  PB_GAN.ipynb  PB_GAN_mess.ipynb  PBmixer.ipynb  PBmixerARC.ipynb  PBmixerAtt.ipynb  PBmnistVAE.ipynb  PBmultidataVAE.ipynb  PBsimpleAlgo.ipynb  PBsimpleEmbed.ipynb  PBsimpleNet.ipynb  RNN.ipynb  RNN_AR.ipynb  boundaries.ipynb  draft.ipynb  mnist.ipynb  netboundaries.ipynb  pfmnist.ipynb  pfmnistAE.ipynb  pfmnistDAE .ipynb  pfmnistDAEBatch.ipynb  pfmnistSimp.ipynb  positional_encoding_component.ipynb  simpleClassification.ipynb  simple_mnist_gen_discrete.ipynb  simple_mnist_gen_global.ipynb
pico/: pyproject.toml
